--- a/main.Html
+++ b/main.Html
@@ -3,38 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MUHAMMAD WASEEM</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main-container">
         <div class="header">
-          <h1 class="h1">MUHMAMMAD WASEEM</h1>
-          <h3 class="h1">Software-Developer</h3>
+          <h1 class="h1">MUHAMMAD WASEEM</h1>
+          <h3 class="h1">Software Developer</h3>
         </div>
 
-
         <div class="sidebar">
-
-         <img  id="picture" src="/icons/AdobeStock_559145847-1024x682.jpeg" alt="profile picture">
+         <img id="picture" src="icons/AdobeStock_559145847-1024x682.jpeg" alt="profile picture">
           <div class="about">
             <h2 style="text-align: center;">About</h2>
-            <br>
             <p>
-As a highly motivated and dedicated individual, I bring a unique blend of skills, experience, and passion to the table. With a strong foundation in many Industries, I have developed a keen sense of skill that enables me to approach challenges with a creative and analytical mindset.
+As a highly motivated and dedicated individual, I bring a unique blend of skills, experience, and passion to the table. With a strong foundation in many industries, I have developed a keen sense of skill that enables me to approach challenges with a creative and analytical mindset.
             </p>
-            <br>
             <h2 style="text-align: center;">Contact Me</h2>
             <br>
-            <br>
-            <h4 style="text-align: center;">03032183846</h4>
+            <h4 style="text-align: center;">0303-2183846</h4>
             <h4 style="text-align: center;">m.waseem5196@gmail.com</h4>
-            <h4 style="text-align: center;">korangi karachi</h4>
+            <h4 style="text-align: center;">Korangi, Karachi</h4>
             <br>
-            <br>
-            <h2 style="text-align: center;"> Skills</h2>
-            <br>
-
+            <h2 style="text-align: center;">Skills</h2>
             <h3 id="skills">
                 <ul>
                     <li>HTML</li>
@@ -45,48 +37,34 @@ As a highly motivated and dedicated individual, I bring a unique blend of skills
                     <li>Ms-Office</li>
                 </ul>
             </h3>
-             <br>
-             <br>
-            <button id="button">SKills</button>
+           <div class="button-main">
+            <button id="button">Show Skills</button>
+            </div>
           </div>
         </div>
-
-
 
         <div class="progess">
             <div class="detail">
             
             <h1><span style="font-size: 40px;">&#10499;</span> Education</h1>
-            <br>
-            <h2>BS-Commerce(2022-2026)</h2>
-            <h3>Fedral Urdu university</h3>
-            <br>
+            <h2>BS Commerce (2022-2026)</h2>
+            <h3>Federal Urdu University</h3>
             <h2>Intermediate</h2>
-            <h3>Goverment-Degree-Boys-Colleage</h3>
-            <br>
+            <h3>Government Degree Boys College</h3>
             <h2>Matriculation</h2>
-            <h3>Al-Aqsa-English-Grammer-School</h3>
-            <br>
+            <h3>Al-Aqsa English Grammar School</h3>
 
             <h1><span style="font-size: 40px;">&#10499;</span> Language</h1>
-            <br>
             <h3>Urdu</h3>
             <h3>English</h3>
             <h3>Punjabi</h3>
-            <br>
             
-            <br>
-            <h1><span style="font-size: 40px;">&#10499;</span> Experiance</h1>
-            <br>
-            <h2>Shanfoods</h2>
+            <h1><span style="font-size: 40px;">&#10499;</span> Experience</h1>
+            <h2>Shan Foods</h2>
             <h3>Administration Officer (2018-2023)</h3>
-            <br>
-            <h2>Sindh-Police</h2>
-            <h3>PS-Constable (2023-continue)</h3>
-
+            <h2>Sindh Police</h2>
+            <h3>PS Constable (2023-present)</h3>
             </div>
-
-
         </div>
     </div>
 
