--- a/main.Html
+++ b/main.Html
@@ -14,12 +14,15 @@
         </div>
 
         <div class="sidebar">
-         <img id="picture" src="icons/AdobeStock_559145847-1024x682.jpeg" alt="profile picture">
+         <img id="picture" src="profile.jpng" alt="profile picture">
           <div class="about">
+            <br>
             <h2 style="text-align: center;">About</h2>
+            <br>
             <p>
 As a highly motivated and dedicated individual, I bring a unique blend of skills, experience, and passion to the table. With a strong foundation in many industries, I have developed a keen sense of skill that enables me to approach challenges with a creative and analytical mindset.
             </p>
+            <br>
             <h2 style="text-align: center;">Contact Me</h2>
             <br>
             <h4 style="text-align: center;">0303-2183846</h4>
